# scoreledger-rs

./: CHANGELOG.md  Cargo.toml  README.md
src/: calculate_mean.rs  errors.rs  goals.rs  grades.rs  lib.rs  main.rs  saving.rs  subject.rs
