[package]
name = "scoreledger"
version = "0.3.1"
edition = "2024"
description = "A CLI tool that helps you analyze data from your report card."
license = "MIT"
readme = "README.md"
repository = "https://github.com/Devitzer/scoreledger-rs"
keywords = ["cli", "tool", "school", "grade", "subject"]
categories = ["command-line-utilities"]

[dependencies]
dialoguer = "0.12.0"
dirs = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
